--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,14 @@
 :root {
-  --cinza: #aaa;
-  --vermelha: #e93d50;
-  --vermelha-escura: #af303f;
+  --cinza: #c5c5c5;
+  --lilas: #9264FF;
+  --lilas-escuro: #6232d3;
   --branca: #fff;
-  --luz: rgb(229, 255, 0);
+  --luz: #FFCB00;
 }
 
 body {
   align-items: center;
-  background: linear-gradient(45deg, #a7cfdf 0%,#23538a 100%);
+  background: linear-gradient(45deg, #d5c5ff 0%,#ae5dff 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -22,10 +22,16 @@ h1 {
   font-size: 2rem;
 }
 
+.bateria {
+  width: 15rem;
+  height: 15rem;
+  margin-bottom: -3px;
+}
+
 .teclado {
   background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
-  box-shadow: 6px 8px 0 6px #666, 10px 10px 10px #000;
-  border-radius: 30px;
+  box-shadow: 10px 10px 5px 5px var(--lilas), 10px 10px 10px #000;
+  border-radius: 10px;
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(3, 1fr);
@@ -34,23 +40,28 @@ h1 {
 
 .tecla {
   background-color: var(--branca);
-  border-radius: 30px;
+  border-radius: 10px;
   box-shadow: 3px 3px 0 var(--cinza);
-  color: var(--vermelha);
+  color: var(--lilas);
   cursor: pointer;
-  height: 120px;
-  font-size: 1.75em;
+  height: 100px;
+  font-size: 1.5em;
   font-weight: bold;
-  line-height: 120px;
+  line-height: 90px;
   text-align: center;
-  width: 120px;
+  width: 100px;
+}
+
+.tecla:hover {
+  box-shadow: 1px 1px 5px 3px #bdbdbd;
+  border-radius: 10px;
 }
 
 .tecla.ativa,
 .tecla:active {
-  background-color: var(--vermelha);
-  border: 4px solid  var(--vermelha);
-  box-shadow: 3px 3px 0 var(--vermelha-escura) inset;
+  background-color: var(--lilas);
+  border: 2px solid  var(--lilas);
+  box-shadow: 3px 3px 0 var(--lilas-escuro) inset;
   color: var(--branca);
   outline: none;
 }
@@ -63,5 +74,5 @@ h1 {
 
 .tecla.ativa:focus,
 .tecla:active:focus {
-  box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
+  box-shadow: 3px 3px 0 var(--lilas-escuro) inset, 1px 1px 10px var(--luz);
 }
