--- a/css/estilos.css
+++ b/css/estilos.css
@@ -60,9 +60,11 @@ body {
 
 .sound_icon {
   position: absolute;
-  width: 50%;
-  top: 20%;
-  left: 25%;
+  width: 90%;
+  height: 50%;
+  top: 5%;
+  left: 5%;
+  border-radius: 30px 30px 30px 30px;
 }
 
 .keyboard_bg {
